Show raster plot

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,6 +107,13 @@
                 </div>
             </div>
 
+            <!-- Raster plot -->
+            <div class="row">
+                <div class="twelve columns">
+                    <img id="rasterPlot">
+                </div>
+            </div>
+
         </form>
     </div>
 
