--- a/static/styles.css
+++ b/static/styles.css
@@ -28,48 +28,10 @@ html.wait * {
 /*  Left panel                                                                                   */
 /*************************************************************************************************/
 
-.container {
+/* .container {
     max-width: 1280px;
-}
+} */
 
-#left {
-    padding: 20px;
-    background-color: #ddd;
-    position: sticky;
-    top: 20px;
-}
-
-#left ol {
-    list-style-type: none;
-    padding-bottom: 8px;
-    margin-bottom: 8px;
-    border-bottom: 1px solid #888;
-}
-
-#left ol select {
-    background-color: #eaeaea;
-    margin-bottom: 8px;
-}
-
-#left ol input {
-    background-color: #eaeaea;
-    width: 100%;
-    margin-bottom: 0;
-}
-
-#left ol li {
-    margin-bottom: 8px;
-}
-
-#left li label {
-    padding: 0 0 0 10px;
-    margin-bottom: 4px;
-    font-weight: bold;
-}
-
-#left li span {
-    padding-left: 10px;
-}
 
 
 
@@ -77,7 +39,7 @@ html.wait * {
 /*  Right panel                                                                                  */
 /*************************************************************************************************/
 
-#right img {
+#rasterPlot {
     width: 100%;
     height: 100%;
     border: 1px solid #aaa;
