Add trial raster plot

--- a/static/styles.css
+++ b/static/styles.css
@@ -22,6 +22,11 @@ html.wait * {
     padding: 0 10px;
 }
 
+h2 {
+    font-size: 24pt;
+    text-align: center;
+    margin: 12px 0;
+}
 
 
 /*************************************************************************************************/
@@ -39,7 +44,7 @@ html.wait * {
 /*  Right panel                                                                                  */
 /*************************************************************************************************/
 
-#rasterPlot {
+img {
     width: 100%;
     height: 100%;
     border: 1px solid #aaa;
