--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,9 @@
 
             <!-- Session selector -->
             <div class="row">
+                <h2>Session</h2>
+            </div>
+            <div class="row">
                 <div class="three columns">
                     <label for="selectSession">select a session</label>
                 </div>
@@ -111,6 +114,27 @@
             <div class="row">
                 <div class="twelve columns">
                     <img id="rasterPlot">
+                </div>
+            </div>
+
+            <!-- Trial selector -->
+            <div class="row">
+                <h2>Trial</h2>
+            </div>
+            <div class="row">
+                <div class="three columns">
+                    <label for="selectTrial">select a trial</label>
+                </div>
+                <div class="nine columns">
+                    <select id="trialSelector" class="u-full-width">
+                    </select>
+                </div>
+            </div>
+
+            <!-- Trial raster -->
+            <div class="row">
+                <div class="twelve columns">
+                    <img id="trialRasterPlot">
                 </div>
             </div>
 
