Add cluster plot

--- a/templates/index.html
+++ b/templates/index.html
@@ -138,6 +138,27 @@
                 </div>
             </div>
 
+            <!-- Cluster selector -->
+            <div class="row">
+                <h2>Cluster</h2>
+            </div>
+            <div class="row">
+                <div class="three columns">
+                    <label for="selectCluster">select a cluster</label>
+                </div>
+                <div class="nine columns">
+                    <select id="clusterSelector" class="u-full-width">
+                    </select>
+                </div>
+            </div>
+
+            <!-- Cluster plot -->
+            <div class="row">
+                <div class="twelve columns">
+                    <img id="clusterPlot">
+                </div>
+            </div>
+
         </form>
     </div>
 
