Next step: integrate Unity widget

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,10 @@
         </div>
         <form onsubmit="return false;">
 
+            <!-- Unity -->
+            <div class="row">
+            </div>
+
             <!-- Session selector -->
             <div class="row">
                 <h2>Session</h2>
