--- a/templates/index.html
+++ b/templates/index.html
@@ -121,6 +121,19 @@
                 </div>
             </div>
 
+
+            <div class="row">
+                <!-- Pyschometric plot -->
+                <div class="six columns">
+                    <img id="psychometricPlot">
+                </div>
+                <!-- Cluster good bad plot -->
+                <div class="six columns">
+                    <img id="clusterGoodBadPlot">
+                </div>
+            </div>
+
+
             <!-- Trial selector -->
             <div class="row">
                 <h2>Trial</h2>
@@ -135,6 +148,18 @@
                 </div>
             </div>
 
+            <!-- Trial details -->
+            <div class="row">
+                <div class="three columns">
+                    Trial details
+                </div>
+
+                <div class="nine columns" id="trialDetails">
+
+                </div>
+            </div>
+
+
             <!-- Trial raster -->
             <div class="row">
                 <div class="twelve columns">
@@ -147,12 +172,24 @@
                 <h2>Cluster</h2>
             </div>
             <div class="row">
-                <div class="three columns">
+                <div class="two columns">
                     <label for="selectCluster">select a cluster</label>
                 </div>
-                <div class="nine columns">
+                <div class="four columns">
                     <select id="clusterSelector" class="u-full-width">
                     </select>
+                </div>
+            </div>
+
+
+            <!-- Cluster details -->
+            <div class="row">
+                <div class="three columns">
+                    Cluster details
+                </div>
+
+                <div class="nine columns" id="clusterDetails">
+
                 </div>
             </div>
 
@@ -160,6 +197,20 @@
             <div class="row">
                 <div class="twelve columns">
                     <img id="clusterPlot">
+                </div>
+            </div>
+
+            <!-- Cluster response plot -->
+            <div>
+                <div class="twelve columns">
+                    <img id="clusterResponsePlot">
+                </div>
+            </div>
+
+            <!-- Cluster properties plot -->
+            <div>
+                <div class="twelve columns">
+                    <img id="clusterPropertiesPlot">
                 </div>
             </div>
 
