--- a/static/styles.css
+++ b/static/styles.css
@@ -29,8 +29,9 @@ h2 {
 }
 
 
+
 /*************************************************************************************************/
-/*  Left panel                                                                                   */
+/*  Body                                                                                         */
 /*************************************************************************************************/
 
 /*.container {
@@ -39,18 +40,28 @@ h2 {
 
 
 .flex-container {
-  display: flex;
-  width: 100%;
+    display: flex;
+    width: 100%;
 }
 
-/*************************************************************************************************/
-/*  Right panel                                                                                  */
-/*************************************************************************************************/
+.columns {}
+
+/*
+.fill {
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    background-image: url("https://cdn.geekwire.com/wp-content/uploads/2018/06/180620-brain-1260x709.jpg");
+    object-fit: cover;
+} */
+
 
 img {
-    width: auto; /* changed this from 100% but now scaling with page doesn't work */
-    height: 100%;
-    aspect-ratio: 3/2;
+    /* changed this from 100% but now scaling with page doesn't work */
+    width: 100%;
+
+    /* height: 100%; */
+    /* aspect-ratio: 3/2; */
 }
 
 
