--- a/templates/index.html
+++ b/templates/index.html
@@ -82,137 +82,115 @@
         </div>
         <form onsubmit="return false;">
 
-            <!-- Unity -->
-            <div class="row">
-            </div>
-
-            <!-- Session selector -->
-            <div class="row">
-                <h2>Session</h2>
-            </div>
-            <div class="row">
-                <div class="three columns">
-                    <label for="selectSession">select a session</label>
-                </div>
-                <div class="nine columns">
-                    <select id="sessionSelector" class="u-full-width">
-                        {% for session in sessions %}
-                        <option value="{{ session.pid }}">{{ session.pid }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-            </div>
-
-            <!-- Session details -->
-            <div class="row">
-                <div class="three columns">
-                    session details
-                </div>
-
-                <div class="nine columns" id="sessionDetails">
-
-                </div>
-            </div>
-
-            <!-- Raster plot -->
             <div class="row">
                 <div class="twelve columns">
-                    <img id="rasterPlot">
+                    <h2>Session overview</h2>
+                </div>
+            </div>
+
+            <!-- FIRST ROW -->
+            <div class="row">
+                <!-- UNITY -->
+                <div class="eight columns">
+                    <img src="https://cdn.geekwire.com/wp-content/uploads/2018/06/180620-brain-1260x709.jpg"
+                        style="aspect-ratio: 1; object-fit: cover;">
+                </div>
+
+                <!-- SESSION DETAILS -->
+                <div class="four columns">
+
+                    <!-- SESSION DROPDOWN -->
+                    <div class="nine columns">
+                        <select id="sessionSelector" class="u-full-width">
+                            {% for session in sessions %}
+                            <option value="{{ session.pid }}">PID {{ session.pid }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                    <div id="sessionDetails">
+                    </div>
                 </div>
             </div>
 
 
+            <!-- SESSION PLOTS -->
             <div class="row">
-                <!-- Pyschometric plot -->
+                <!-- Raster -->
                 <div class="six columns">
+                    <img id="rasterPlot">
+                </div>
+
+                <!-- Pyschometric plot -->
+                <div class="three columns">
                     <img id="psychometricPlot">
                 </div>
+
                 <!-- Cluster good bad plot -->
-                <div class="six columns">
+                <div class="three columns">
                     <img id="clusterGoodBadPlot">
                 </div>
             </div>
 
 
-            <!-- Trial selector -->
+            <!-- TRIAL -->
             <div class="row">
-                <h2>Trial</h2>
+                <div class="twelve columns">
+                    <h2>Single trial overview</h2>
+                </div>
             </div>
             <div class="row">
-                <div class="three columns">
-                    <label for="selectTrial">select a trial</label>
-                </div>
-                <div class="nine columns">
+                <!-- Trial selector -->
+                <div class="two columns">
                     <select id="trialSelector" class="u-full-width">
                     </select>
                 </div>
-            </div>
 
-            <!-- Trial details -->
-            <div class="row">
-                <div class="three columns">
-                    Trial details
+                <!-- Trial details -->
+                <div class="two columns" id="trialDetails">
                 </div>
 
-                <div class="nine columns" id="trialDetails">
-
-                </div>
-            </div>
-
-
-            <!-- Trial raster -->
-            <div class="row">
-                <div class="twelve columns">
+                <!-- Trial raster plot -->
+                <div class="eight columns">
                     <img id="trialRasterPlot">
                 </div>
             </div>
 
-            <!-- Cluster selector -->
+
+            <!-- CLUSTER -->
             <div class="row">
-                <h2>Cluster</h2>
+                <div class="twelve columns">
+                    <h2>Single cluster overview</h2>
+                </div>
             </div>
             <div class="row">
+                <!-- Cluster selector -->
                 <div class="two columns">
-                    <label for="selectCluster">select a cluster</label>
-                </div>
-                <div class="four columns">
                     <select id="clusterSelector" class="u-full-width">
                     </select>
                 </div>
-            </div>
 
-
-            <!-- Cluster details -->
-            <div class="row">
-                <div class="three columns">
-                    Cluster details
+                <!-- Cluster details -->
+                <div class="two columns" id="clusterDetails">
                 </div>
 
-                <div class="nine columns" id="clusterDetails">
-
-                </div>
-            </div>
-
-            <!-- Cluster plot -->
-            <div class="row">
-                <div class="twelve columns">
+                <!-- Cluster plot -->
+                <div class="eight columns">
                     <img id="clusterPlot">
                 </div>
             </div>
 
-            <!-- Cluster response plot -->
-            <div>
-                <div class="twelve columns">
-                    <img id="clusterResponsePlot">
-                </div>
-            </div>
 
-            <!-- Cluster properties plot -->
-            <div>
+            <!-- CLUSTER PLOTS -->
+            <div class="row">
                 <div class="twelve columns">
+                    <!-- Cluster response plot -->
+                    <img id="clusterResponsePlot">
+                    <!-- Cluster properties plot -->
                     <img id="clusterPropertiesPlot">
                 </div>
             </div>
+
 
         </form>
     </div>
