--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
             <div class="row">
                 <!-- Trial selector -->
                 <div class="two columns">
-                    <select id="trialSelector" class="u-full-width">
+                    <select multiple id="trialSelector" class="u-full-width multiple">
                     </select>
                 </div>
 
@@ -166,7 +166,7 @@
             <div class="row">
                 <!-- Cluster selector -->
                 <div class="two columns">
-                    <select id="clusterSelector" class="u-full-width">
+                    <select multiple id="clusterSelector" class="u-full-width multiple">
                     </select>
                 </div>
 
