--- a/templates/index.html
+++ b/templates/index.html
@@ -117,12 +117,12 @@
             <!-- SESSION PLOTS -->
             <div class="row">
                 <!-- Raster -->
-                <div class="six columns">
+                <div class="five columns">
                     <img id="rasterPlot">
                 </div>
 
                 <!-- Pyschometric plot -->
-                <div class="three columns">
+                <div class="four columns">
                     <img id="psychometricPlot">
                 </div>
 
@@ -142,7 +142,7 @@
             <div class="row">
                 <!-- Trial selector -->
                 <div class="two columns">
-                    <select multiple id="trialSelector" class="u-full-width multiple">
+                    <select size="15" id="trialSelector" class="u-full-width multiple">
                     </select>
                 </div>
 
@@ -166,7 +166,7 @@
             <div class="row">
                 <!-- Cluster selector -->
                 <div class="two columns">
-                    <select multiple id="clusterSelector" class="u-full-width multiple">
+                    <select size="15" id="clusterSelector" class="u-full-width multiple">
                     </select>
                 </div>
 
