Use templates for HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,200 +1,10 @@
-{% import 'macros.html' as macros with context %}
+{% extends 'template.html' %}
+{% block content %}
 
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>IBL public website prototype</title>
-
-
-    <!-- CSS -->
-
-    <!-- Raleway font -->
-    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
-
-    <!-- Normalize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- Skeleton -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-        integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- noUIslider -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.1/nouislider.min.css"
-        integrity="sha512-qveKnGrvOChbSzAdtSs8p69eoLegyh+1hwOMbmpCViIwj7rn4oJjdmMvWOuyQlTOZgTlZA0N2PXA7iA8/2TUYA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
-
-
-
-    <!-- Javascript -->
-
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- JQuery UI -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"
-        integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- noUIslider -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.1/nouislider.min.js"
-        integrity="sha512-T5Bneq9hePRO8JR0S/0lQ7gdW+ceLThvC80UjwkMRz+8q+4DARVZ4dqKoyENC7FcYresjfJ6ubaOgIE35irf4w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- plotly -->
-    <script src="https://cdn.plot.ly/plotly-2.8.3.min.js"></script>
-
-    <!-- wNumb -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.2.0/wNumb.min.js"
-        integrity="sha512-igVQ7hyQVijOUlfg3OmcTZLwYJIBXU63xL9RC12xBHNpmGJAktDnzl9Iw0J4yrSaQtDxTTVlwhY730vphoVqJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- Passing data from Flask to Javascript -->
-    <script>
-        const JS_CONTEXT = {{ js_context| tojson }};
-    </script>
-
-    <!-- Custom Array class -->
-    <script src="{{ url_for('static', filename='array.js') }}"></script>
-
-    <!-- Custom JS code -->
-    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
-
-</head>
-
-<body>
-
-    <!-- .container is main centered wrapper -->
-    <div class="container">
-        <div class="row">
-            <h1>IBL public website prototype</h1>
-            <div id="titleLinks">
-                <a href="https://github.com/int-brain-lab/website" target="_blank">GitHub</a>
-            </div>
-        </div>
-        <form onsubmit="return false;">
-
-            <div class="row">
-                <div class="twelve columns">
-                    <h2>Session overview</h2>
-                </div>
-            </div>
-
-            <!-- FIRST ROW -->
-            <div class="row">
-                <!-- UNITY -->
-                <div class="eight columns">
-                    <img src="https://cdn.geekwire.com/wp-content/uploads/2018/06/180620-brain-1260x709.jpg"
-                        style="aspect-ratio: 1; object-fit: cover;">
-                </div>
-
-                <!-- SESSION DETAILS -->
-                <div class="four columns">
-
-                    <!-- SESSION DROPDOWN -->
-                    <div class="nine columns">
-                        <select id="sessionSelector" class="u-full-width">
-                            {% for session in sessions %}
-                            <option value="{{ session.pid }}">PID {{ session.pid }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-
-                    <div id="sessionDetails">
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- SESSION PLOTS -->
-            <div class="row">
-                <!-- Raster -->
-                <div class="five columns">
-                    <img id="rasterPlot">
-                </div>
-
-                <!-- Pyschometric plot -->
-                <div class="four columns">
-                    <img id="psychometricPlot">
-                </div>
-
-                <!-- Cluster good bad plot -->
-                <div class="three columns">
-                    <img id="clusterGoodBadPlot">
-                </div>
-            </div>
-
-
-            <!-- TRIAL -->
-            <div class="row">
-                <div class="twelve columns">
-                    <h2>Single trial overview</h2>
-                </div>
-            </div>
-            <div class="row">
-                <!-- Trial selector -->
-                <div class="two columns">
-                    <select size="15" id="trialSelector" class="u-full-width multiple">
-                    </select>
-                </div>
-
-                <!-- Trial details -->
-                <div class="two columns" id="trialDetails">
-                </div>
-
-                <!-- Trial raster plot -->
-                <div class="eight columns">
-                    <img id="trialRasterPlot">
-                </div>
-            </div>
-
-
-            <!-- CLUSTER -->
-            <div class="row">
-                <div class="twelve columns">
-                    <h2>Single cluster overview</h2>
-                </div>
-            </div>
-            <div class="row">
-                <!-- Cluster selector -->
-                <div class="two columns">
-                    <select size="15" id="clusterSelector" class="u-full-width multiple">
-                    </select>
-                </div>
-
-                <!-- Cluster details -->
-                <div class="two columns" id="clusterDetails">
-                </div>
-
-                <!-- Cluster plot -->
-                <div class="eight columns">
-                    <img id="clusterPlot">
-                </div>
-            </div>
-
-
-            <!-- CLUSTER PLOTS -->
-            <div class="row">
-                <div class="twelve columns">
-                    <!-- Cluster response plot -->
-                    <img id="clusterResponsePlot">
-                    <!-- Cluster properties plot -->
-                    <img id="clusterPropertiesPlot">
-                </div>
-            </div>
-
-
-        </form>
+<div class="row">
+    <div class="twelve columns">
+        VIDEO
     </div>
+</div>
 
-</body>
-
-</html>
+{% endblock %}
