--- a/static/styles.css
+++ b/static/styles.css
@@ -39,13 +39,24 @@ h2 {
 }*/
 
 
-.flex-container {
-    display: flex;
+.columns {}
+
+
+.button-explore {
     width: 100%;
+    /* height: 50px; */
+    font-size: 14pt;
+    font-weight: bold;
 }
 
-.columns {
-    /* height: 100% !important; */
+
+figure {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+caption {
+    text-align: center;
 }
 
 
@@ -53,14 +64,6 @@ select.multiple {
     height: 300px !important;
 }
 
-/*
-.fill {
-    overflow: hidden;
-    background-size: cover;
-    background-position: center;
-    background-image: url("https://cdn.geekwire.com/wp-content/uploads/2018/06/180620-brain-1260x709.jpg");
-    object-fit: cover;
-} */
 
 
 img {
