--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,108 @@
 {% extends 'template.html' %}
 {% block content %}
 
+<!-- VIDEO/HERO IMAGE -->
 <div class="row">
     <div class="twelve columns">
-        VIDEO
+        <figure>
+            <img
+                src="https://github.com/int-brain-lab/iblviewer/raw/main/iblviewer_assets/doc/iblviewer_v2_demo_brain_wide_map_1.jpg?raw=true">
+            <caption>Activity of all the neurons recorded in the mouse brain, whilst the animal does a correct trial in
+                the IBL-task</caption>
+        </figure>
     </div>
 </div>
+
+<!-- BUTTON EXPLORE THE DATA -->
+{{ macros.explore() }}
+
+<!-- TEXT -->
+<div class="row">
+    <div class="twelve columns">
+        <h3>What do we study ?</h3>
+
+        <p><strong>Adaptive behavior</strong> requires processing sensory information with focused attention, reaching
+            decisions, acting, and learning from the results of those actions. These require the <strong>brain</strong>
+            to combine a vast
+            array of information from <strong>prior experience</strong>, current sensory <strong>stimuli</strong>, and
+            internal
+            and environmental <strong>contexts</strong>. These computations involve dynamic interactions between
+            <strong>millions of neurons</strong> within local circuits
+            and across <strong>many brain regions.</strong>
+        </p>
+
+        <h3>How is our study conducted ?</h3>
+
+        <p>
+            We conduct our study on <strong>mice</strong> trained to do a standardized <strong>task</strong>, that
+            prompts adaptive behavior. We recorded
+            the signals from <strong>multiple single neurons</strong> using <strong>Neuropixels probes</strong> inserted
+            into <strong>one hemisphere</strong> of the mouse
+            brain. We also recorded the mouse motion using <strong>cameras</strong>, and various signals from other
+            sensors.
+        </p>
+        <p>
+            For a comprehensive view, please <a href="/app">explore the data</a>, or read the article detailing the task
+            and the article
+            detailing our standardized recording methods.
+        </p>
+        <p>
+            The data was collected in XX different laboratories across the globe.
+        </p>
+
+        </p>
+    </div>
+</div>
+
+
+<!-- VIDEOS -->
+<div class="row">
+    <div class="twelve columns">
+        <img
+            src="https://github.com/int-brain-lab/iblviewer/raw/main/iblviewer_assets/doc/iblviewer_v2_demo_brain_wide_map_1.jpg?raw=true">
+    </div>
+</div>
+
+
+<!-- TEXT -->
+<div class="row">
+    <div class="twelve columns">
+        <h3>What is our aim ?</h3>
+
+        <p>We want to provide a dataset containing the activity of thousands single neurons in a volume spanning the
+            whole hemisphere of the mouse brain.
+        </p>
+
+        <h3>How much data do we have ?</h3>
+
+        <p>
+            We recorded XXX neurons in ZZZ mice performing the task, by doing XXX insertions with Neuropixels probes.
+            These neurons are distributed across YY brain regions spanning one brain hemisphere.
+        </p>
+
+        </p>
+    </div>
+</div>
+
+
+<!-- BUTTON EXPLORE THE DATA -->
+{{ macros.explore() }}
+
+
+<!-- SCIENTIFIC FINDINGS -->
+<div class="row">
+    <div class="twelve columns">
+        <h3>What are the major scientific findings ?</h3>
+
+        <h4>Brain Wide Map</h4>
+        <h4>Reproducible Electrophysiology</h4>
+        <h4>Behavior paper</h4>
+
+    </div>
+</div>
+
+
+
+
 
 {% endblock %}
