--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,10 +1,12 @@
 <!-- BEGIN MACROS -->
 
-
-<!-- SESSION SELECTION MACRO -->
-{% macro select_session() -%}
-<!-- Select session -->
+{% macro explore() -%}
+<!-- BUTTON EXPLORE -->
+<div class="row">
+    <div class="twelve columns">
+        <a class="button button-primary button-explore" href="/app">explore the data</a>
+    </div>
+</div>
 {%- endmacro %}
-
 
 <!-- END MACROS -->
