Add Unity widget fallback image

--- a/templates/template.html
+++ b/templates/template.html
@@ -68,6 +68,8 @@
     <!-- Custom JS code -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 
+    {% block header %}{% endblock %}
+
 </head>
 
 <body>
