--- a/static/styles.css
+++ b/static/styles.css
@@ -34,14 +34,6 @@ h2 {
 /*  Body                                                                                         */
 /*************************************************************************************************/
 
-/*.container {
-    max-width: 2000px;
-}*/
-
-
-.columns {}
-
-
 .button-explore {
     width: 100%;
     /* height: 50px; */
@@ -50,10 +42,12 @@ h2 {
 }
 
 
+
 figure {
     margin-left: 0;
     margin-right: 0;
 }
+
 
 caption {
     text-align: center;
@@ -72,6 +66,19 @@ img {
 
     /* height: 100%; */
     /* aspect-ratio: 3/2; */
+}
+
+
+
+/*************************************************************************************************/
+/*  Unity widget                                                                                 */
+/*************************************************************************************************/
+
+#unity-canvas {
+    width: 100%;
+    background-image: url('/static/fallback.png');
+    background-size: contain;
+    aspect-ratio: 1;
 }
 
 
