--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,13 @@
 <div class="row">
     <div class="twelve columns">
         <figure>
-            <img
-                src="https://github.com/int-brain-lab/iblviewer/raw/main/iblviewer_assets/doc/iblviewer_v2_demo_brain_wide_map_1.jpg?raw=true">
+            <!-- <img
+                src="https://github.com/int-brain-lab/iblviewer/raw/main/iblviewer_assets/doc/iblviewer_v2_demo_brain_wide_map_1.jpg?raw=true"> -->
+            <!-- <video url="https://youtu.be/PgXjZJ4mI1s"></video> -->
+            <iframe id="video-1" src="https://www.youtube.com/embed/PgXjZJ4mI1s" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <caption>Activity of all the neurons recorded in the mouse brain, whilst the animal does a correct trial in
                 the IBL-task</caption>
         </figure>
