--- a/static/styles.css
+++ b/static/styles.css
@@ -105,26 +105,6 @@ body {
 }
 
 
-/* #titleLinks {
-    position: relative;
-    top: -20px;
-}
-
-#titleLinks a {
-    padding: 0 10px;
-}
-
-h1 {
-    font-family: "Roboto Condensed";
-}
-
-h2 {
-    font-size: 24pt;
-    text-align: center;
-    margin: 12px 0;
-} */
-
-
 
 /*************************************************************************************************/
 /*  Footer                                                                                       */
@@ -140,15 +120,6 @@ h2 {
 /*************************************************************************************************/
 /*  Body                                                                                         */
 /*************************************************************************************************/
-
-.button-explore {
-    width: 100%;
-    /* height: 50px; */
-    font-size: 14pt;
-    font-weight: bold;
-}
-
-
 
 figure {
     margin-left: 0;
@@ -173,6 +144,40 @@ img {
 
     /* height: 100%; */
     /* aspect-ratio: 3/2; */
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Roboto Condensed";
+    text-transform: uppercase;
+    font-size: 24pt;
+    margin: 30px 0;
+    /* font-variant: small-caps; */
+}
+
+
+
+.button.button-primary {
+    background-color: #005292;
+    width: 100%;
+    font-size: 14pt;
+    font-weight: 400;
+}
+
+
+
+/*************************************************************************************************/
+/*  Videos                                                                                       */
+/*************************************************************************************************/
+
+#video-1 {
+    width: 100%;
+    aspect-ratio: 1.777;
 }
 
 
