--- a/static/styles.css
+++ b/static/styles.css
@@ -69,7 +69,7 @@ body {
     top: 0;
     z-index: +100;
 
-    font-family: "Roboto Condensed";
+    font-family: roboto-condensed;
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 1px;
@@ -153,7 +153,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Roboto Condensed";
+    font-family: roboto-condensed;
     text-transform: uppercase;
     font-size: 24pt;
     margin: 30px 0;
