changes to plots

--- a/templates/app.html
+++ b/templates/app.html
@@ -53,19 +53,9 @@
 
 <!-- SESSION PLOTS -->
 <div class="row">
-    <!-- Raster -->
-    <div class="five columns">
-        <img id="rasterPlot">
-    </div>
-
-    <!-- Pyschometric plot -->
-    <div class="four columns">
-        <img id="psychometricPlot">
-    </div>
-
-    <!-- Cluster good bad plot -->
-    <div class="three columns">
-        <img id="clusterGoodBadPlot">
+    <!-- Session overview plot -->
+    <div class="twelve columns">
+        <img id="sessionPlot">
     </div>
 </div>
 
@@ -76,6 +66,7 @@
         <h2>Single trial overview</h2>
     </div>
 </div>
+
 <div class="row">
     <!-- Trial selector -->
     <div class="two columns">
@@ -86,10 +77,18 @@
     <!-- Trial details -->
     <div class="two columns" id="trialDetails">
     </div>
+</div>
 
+
+<!-- TRIAL PLOTS -->
+<div>
+    <!-- Placeholder for unity -->
+    <div class="six columns">
+        <canvas id="placeholder-canvas"></canvas>
+    </div>
     <!-- Trial raster plot -->
-    <div class="eight columns">
-        <img id="trialRasterPlot">
+    <div class="six columns">
+        <img id="trialPlot">
     </div>
 </div>
 
@@ -111,20 +110,14 @@
     <div class="two columns" id="clusterDetails">
     </div>
 
-    <!-- Cluster plot -->
-    <div class="eight columns">
-        <img id="clusterPlot">
-    </div>
 </div>
 
 
 <!-- CLUSTER PLOTS -->
 <div class="row">
     <div class="twelve columns">
-        <!-- Cluster response plot -->
-        <img id="clusterResponsePlot">
-        <!-- Cluster properties plot -->
-        <img id="clusterPropertiesPlot">
+        <!-- Cluster overview plot -->
+        <img id="clusterPlot">
     </div>
 </div>
 
