Fix arrow buttons

--- a/templates/app.html
+++ b/templates/app.html
@@ -85,8 +85,8 @@
         <!-- Arrow button for navigation -->
         <div class="buttonNav">
             <div>
-                <button class="trialLeft" onclick="arrowButton('trialSelector', -1);">&#11164;</button>
-                <button class="trialRight" onclick="arrowButton('trialSelector', +1);">&#11166;</button>
+                <button class="trialLeft" onclick="arrowButton('trialSelector', -1);">&lt;</button>
+                <button class="trialRight" onclick="arrowButton('trialSelector', +1);">&gt;</button>
             </div>
         </div>
     </div>
@@ -128,8 +128,8 @@
         <!-- Arrow button for navigation -->
         <div class="buttonNav">
             <div>
-                <button class="clusterLeft" onclick="arrowButton('clusterSelector', -1);">&#11164;</button>
-                <button class="clusterRight" onclick="arrowButton('clusterSelector', +1);">&#11166;</button>
+                <button class="clusterLeft" onclick="arrowButton('clusterSelector', -1);">&lt;</button>
+                <button class="clusterRight" onclick="arrowButton('clusterSelector', +1);">&gt;</button>
             </div>
         </div>
     </div>
