--- a/templates/template.html
+++ b/templates/template.html
@@ -78,9 +78,9 @@
                     <!-- MENU -->
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/app">App</a></li>
+                        <li><a href="/app">Explore</a></li>
                         <li><a href="#">Paper</a></li>
-                        <li><a href="https://github.com/int-brain-lab/website">Code</a></li>
+                        <li><a href="https://int-brain-lab.github.io/iblenv/">Code</a></li>
                         <li><a href="https://www.internationalbrainlab.com/">Lab</a></li>
                     </ul>
                 </div>
